@@ -1,6 +1,12 @@
 use strict;
 
-use Test::More tests => 24;
+use Test::More;
+
+BEGIN {
+  eval "use DBIx::Class::CDBICompat;";
+  plan $@ ? (skip_all => 'Class::Trigger and DBIx::ContextualFetch required') : (tests=> 24);
+}
+
 
 #-----------------------------------------------------------------------
 # Make sure that we can set up columns properly
