@@ -1,4 +1,9 @@
-use Test::More tests => 2;
+use Test::More;
+
+BEGIN {
+  eval "use DBIx::Class::CDBICompat;";
+  plan $@ ? (skip_all => 'Class::Trigger and DBIx::ContextualFetch required') : (tests=> 24);
+}
 
 use strict;
 
