@@ -1,6 +1,11 @@
 use strict;
 use Test::More;
 
+BEGIN {
+  eval "use DBIx::Class::CDBICompat;";
+  plan $@ ? (skip_all => 'Class::Trigger and DBIx::ContextualFetch required') : (tests=> 24);
+}
+
 #----------------------------------------------------------------------
 # Test database failures
 #----------------------------------------------------------------------
